--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <ion-icon name="logo-instagram"></ion-icon>
         </a>
 
-        <a href="https://www.linkedin.com/in/vitor-rodrigues-baa310266">
+        <a href="https://www.linkedin.com/in/rodrigvues">
           <ion-icon name="logo-linkedin"></ion-icon>
         </a>
       </div>
